Change Log:
=============================
- DanbooruDownloader20151203
  - Fix Issue #64: Add warning when file exists.
  - Implement Feature #67: Option to replace underscore in Tag to space
  - Add Context Menu to open downloaded files.
  - Set max width for data grid column to 300px.
  - Add cookie login method for Gelbooru. Deprecate the UseAuth, replace with LoginType.

- DanbooruDownloader20151012
  - Fix Issue #62: Refresh image size on start.
  - Fix Issue #63: Shimmie rss page batch bug.
  - Add null check if tags.xml is empty (xml must be valid!)
  - Update sankaku parser to parse tags directly from post (Global Tags XML must not be ticked).

- DanbooruDownloader20150923
  - Fix Issue#58: Add scroll bar on main window.
  - Fix Issue#61: remove limit parameter for sankakucomplex.
  - Add option to replace empty tag with default value.

- DanbooruDownloader20150429
  - Implement Feature #51: Allow option to ignore/blacklist only for General tags.
  - Fix Issue #57: Replace tags if over the limit with 'multiple_tag_type'.
  - Implement Feature #57: Take tags only the specified limit option.

- DanbooruDownloader20150116
  - Add option to disable list file generation of downloaded images (Issue #53).
  - Update message for Batch Job (Issue #48).

- DanbooruDownloader20140827
  - Implement HTTPS handler based on provider url.
  - Update Feature #41: use urlencode on both main tab and batch download tab
  - Update filename sanitizer to handler issue #45
  - Update http error code handler.

- DanbooruDownloader20140705
  - Update Sankaku Parser: fix url resolution.
  - Fix Issue #41: use url encoding for tags search.

- DanbooruDownloader20140308
  - Update Shimmie Parser.
  - Fix json Parser.
  - Fix Provider Form.

- DanbooruDownloader20140204
  - Remove duplicated feature extension.
  - Sankaku Parser: Auto dump html page if encounter error.

- DanbooruDownloader20140202
  - Fix Sankaku saving: Illegal character in path name.